@@ -4,7 +4,7 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     04/12/2001
-## RCS-ID:      $Id: typemap,v 1.12 2004/12/21 21:12:52 mbarbon Exp $
+## RCS-ID:      $Id: typemap,v 1.13 2005/07/30 10:23:54 mbarbon Exp $
 ## Copyright:   (c) 2001, 2003-2004 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
@@ -25,20 +25,20 @@ wxGridCellAttr *        O_NON_WXOBJECT
 wxGridCellAttr *        O_NON_WXOBJECT
 wxGridCellAttr::wxAttrKind      T_ENUM
 
-wxGridCellRenderer *           O_NON_WXOBJECT
-wxGridCellStringRenderer *     O_NON_WXOBJECT
-wxGridCellNumberRenderer *     O_NON_WXOBJECT
-wxGridCellFloatRenderer *      O_NON_WXOBJECT
-wxGridCellBoolRenderer *       O_NON_WXOBJECT
-wxPlGridCellRenderer *          O_NON_WXOBJECT
+wxGridCellRenderer *            O_WXCLIENTDATACONTAINER
+wxGridCellStringRenderer *      O_NON_WXOBJECT
+wxGridCellNumberRenderer *      O_NON_WXOBJECT
+wxGridCellFloatRenderer *       O_NON_WXOBJECT
+wxGridCellBoolRenderer *        O_NON_WXOBJECT
+wxPlGridCellRenderer *          O_WXCLIENTDATACONTAINER
 
-wxGridCellEditor *             O_NON_WXOBJECT
-wxGridCellTextEditor *         O_NON_WXOBJECT
-wxGridCellNumberEditor *       O_NON_WXOBJECT
-wxGridCellFloatEditor *        O_NON_WXOBJECT
-wxGridCellBoolEditor *         O_NON_WXOBJECT
-wxGridCellChoiceEditor *       O_NON_WXOBJECT
-wxPlGridCellEditor *            O_NON_WXOBJECT
+wxGridCellEditor *              O_WXCLIENTDATACONTAINER
+wxGridCellTextEditor *          O_NON_WXOBJECT
+wxGridCellNumberEditor *        O_NON_WXOBJECT
+wxGridCellFloatEditor *         O_NON_WXOBJECT
+wxGridCellBoolEditor *          O_NON_WXOBJECT
+wxGridCellChoiceEditor *        O_NON_WXOBJECT
+wxPlGridCellEditor *            O_WXCLIENTDATACONTAINER
 
 wxPlGridTable*                  O_WXOBJECT
 wxGridTableBase*                O_WXOBJECT
